# courses-business-decisions

./: .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BACKLOG.md  CLAUDE.md  DESIGN.md  LECTURE_UPGRADE.md  LICENSE-CONTENT  LICENSE.md  PLAN.md  PRODUCT-PITCH.md  README.md  SPRINT.md  conftest.py  environment.yml  pyproject.toml
.claude/docs/: backlog.md  upgrades.md
.claude/skills/author-lecture/: SKILL.md
.claude/skills/review-code/: SKILL.md
.claude/skills/review-course/: SKILL.md
.claude/skills/review-writing/: SKILL.md
.github/workflows/: ci.yml  docs.yml
_support/prompts/: author-lecture.md  code-review.md  docs-review.md  docstring-review.md  lecture-guidelines.md  lecture-review.md  notebook-review.md  review-code.md  review-course.md  review-writing.md
docs/: Makefile  NEXT.md  README.md  requirements.txt
docs/_build/html/: .buildinfo  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js  syllabus.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  introduction.doctree  syllabus.doctree
docs/_build/html/_sources/: index.rst.txt  syllabus.md.txt
docs/_build/html/lectures/: 01_lecture.html  index.html
docs/configurations/: fontlist-v390.json  matplotlibrc
docs/iterations/: uw_winter_2026.md
docs/source/: GUIDELINES.md  TODO.rst  about.md  conf.py  index.md  index.rst  introduction.md  introduction.rst  overview.md  references.bib  references.md
docs/source/_static/: custom.css
docs/source/allocate-resources/: index.md
docs/source/allocate-resources/01-portfolio-optimization/: config_allocation.yaml  lecture.ipynb  support.py
docs/source/build-systems/: index.md
docs/source/build-tools/: index.md
docs/source/course-projects/: github-workflow.md  index.md
docs/source/decision-implementation/: index.md
docs/source/decision-loop/: index.md
docs/source/drive-actions/: index.md
docs/source/evaluate-evidence/: index.md
docs/source/evaluate-evidence/01-evaluating-evidence/: lecture.ipynb
docs/source/evaluate-evidence/01-evidence-quality/: lecture.ipynb  support.py
docs/source/evaluate-evidence/02-agentic-evaluation-system/: lecture.ipynb
docs/source/evaluate-evidence/03-application/: config_severity_clean.yaml  (+5 more)
docs/source/guest-lecturers/: index.md
docs/source/guests/: index.md
docs/source/handouts/: index.md
docs/source/impact-measurement/: 01_generalized_roy_model.ipynb  index.md
docs/source/improve-decisions/: index.md
docs/source/iterations/: econ-481A-uw-2026.md  index.md  uw_winter_2026.md
docs/source/labs/: 01_labs.ipynb  index.md
docs/source/lectures/: 01_lecture.ipynb  index.md  index.rst
docs/source/measure-impact/: 01_potential_outcome_model.ipynb  config_enrichment_random.yaml  config_simulation.yaml  enrichment_selection_bias.py  index.md  shared.py  support.py
docs/source/modules/: case_studies.rst  data_analysis.rst  decision_frameworks.rst  introduction.rst  risk_management.rst
docs/source/offerings/: index.md
docs/source/overview/: 01_fundamental_problem.ipynb  index.md
docs/source/partners/: index.md
docs/source/portfolio-allocation/: index.md
docs/source/problem_sets/: index.md
docs/source/projects/: index.md
docs/source/resources/: index.md
docs/source/software/: index.md
docs/source/software-development/: index.md
docs/source/tooling/: index.md
docs/source/understand-domain/: 02_catalog_ai.ipynb  config_enrichment_mock.yaml  index.md  prompt_luxury.txt  support.py
(+61 files in other folders)
