[project]
name = "business-decisions-docs"
version = "0.1.0"
description = "Business Decisions Course Documentation"
requires-python = ">=3.11"

[tool.hatch.envs.default]
dependencies = [
    "sphinx>=6.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
    "pypandoc",
    "numpy",
    "pandas",
    "matplotlib",
    "ipykernel",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "nbqa",
    "nbconvert",
    "ruff",
]

[tool.hatch.envs.default.scripts]
build = "sphinx-build -b html docs/source docs/build/html"
notebook = "jupyter nbconvert --to notebook --execute --inplace {args}"
notebooks = "jupyter nbconvert --to notebook --execute --inplace docs/source/**/*.ipynb"

[tool.ruff]
extend-exclude = ["_external"]

[tool.nbqa.exclude]
ruff = "_external"
