[project]
name = "business-decisions-docs"
version = "0.1.0"
description = "Business Decisions Course Documentation"
requires-python = ">=3.11"

[tool.hatch.envs.default]
dependencies = [
    "sphinx>=6.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
    "pypandoc",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "nbqa",
    "nbconvert",
    "nbmake",
    "ruff",
    "online-retail-simulator @ git+https://github.com/eisenhauerIO/tools-catalog-generator.git",
]

[tool.hatch.envs.default.scripts]
build = "sphinx-build -b html docs/source docs/build/html"
notebook = "jupyter nbconvert --to notebook --execute --inplace {args}"
notebooks = "jupyter nbconvert --to notebook --execute --inplace docs/source/**/*.ipynb"

[tool.ruff]
extend-exclude = ["_external"]
line-length = 120

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["D", "E402", "F", "I"]

[tool.nbqa.exclude]
ruff = "_external"
